# ornithe-installer-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.gradle.kts  build.rs  file-saver-adapter.js  index.html  package-lock.json  package.json  settings.gradle.kts  vite.config.js
.github/workflows/: build.yml  deploy.yml  publish.yml
java/: build.gradle.kts
java/src/main/java/net/ornithemc/server_launcher/: ServerLauncher.java
java/src/main/resources/: log4j2.xml
locales/: cs.json  cs_CZ.json  de.json  en.json  fr.json  it.json  ja.json  ua.json  zh-CN.json  zh-TW.json
res/font/: fonts.json
res/packformat/: instance.cfg
src/: errors.rs  main.rs
src/actions/: client.rs  mmc_pack.rs  mod.rs  prism_pack.rs  server.rs
src/net/: manifest.rs  maven.rs  meta.rs  mod.rs
src/ui/: cli.rs  font_loader.rs  gui.rs  mod.rs
