[package]
name = "ornithe-installer-rs"
version = "0.3.1"
edition = "2024"
authors = [
    "moehreag"
]

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["cargo", "derive", "string"] }
current_locale = { version = "0.1.1", optional = true }
eframe = { version = "0.33.2", features = ["wgpu"], optional = true }
egui = { version = "0.33.2", optional = true }
env_logger = "0.11.8"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
log = "0.4.27"
rand = { version = "0.10.0", optional = true }
reqwest = { version = "0.13.1", features = ["json", "native-tls", "http2", "charset", "system-proxy"], default-features = false }
rfd = { version = "0.17.2", optional = true }
rust-i18n = { version = "3.1.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
webbrowser = { version = "1.0.4", optional = true }
zip = { version = "8.1.0", features = ["deflate-flate2"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = { version = "0.10.0", optional = true }

[features]
default = ["gui"]

gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:webbrowser", "dep:rand", "dep:current_locale", "dep:fontconfig"]

[build-dependencies]
embed-resource = "3.0.5"
winres = "0.1.11"

[profile.release]
lto = true
opt-level = 's'
