[package]
name = "ornithe-installer-rs"
version = "0.3.3"
edition = "2024"
authors = [
    "moehreag"
]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["cargo", "derive", "string"] }
current_locale = { git = "https://github.com/i509VCB/current_locale.git", rev = "refs/pull/10/head", optional = true } # todo. change when it's merged.
eframe = { version = "0.33.2", features = ["wgpu"], optional = true }
egui = { version = "0.33.2", optional = true }
log = "0.4.27"
reqwest = { version = "0.13.2", features = ["json", "native-tls", "http2", "charset", "system-proxy"], default-features = false }
rfd = { version = "0.17.2", optional = true }
rust-i18n = { version = "3.1.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
webbrowser = { version = "1.0.4", optional = true }
zip = { version = "8.1.0", features = ["deflate-flate2"], default-features = false }

[target.'cfg(any(unix, windows))'.dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
rand = { version = "0.10.0", optional = true }
env_logger = "0.11.8"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
web-sys = { version = "0.3.91", features = ["Window", "Navigator", "Clipboard", "HtmlCanvasElement", "Element", "Blob", "BlobPropertyBag", "Location"]}
wasm-bindgen-futures = "0.4.64"
wasm-bindgen = "0"
console_log = "1"
console_error_panic_hook = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = { version = "0.10.0", optional = true }

[target.'cfg(windows)'.dependencies]
hide_console_ng = "0"

[features]
default = ["gui"]

gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:rand", "dep:webbrowser", "dep:current_locale", "dep:fontconfig"]

[build-dependencies]
embed-resource = "3.0.5"
winres = "0.1.11"

[profile.release]
lto = true
opt-level = 's'
